fix some tmpchat spacing

--- a/tmpchat_sample.fiddle.css
+++ b/tmpchat_sample.fiddle.css
@@ -121,6 +121,7 @@ input, textarea, .messagelog {
 .systemmessage {
     text-align: center;
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
 input[type="nametext"] {
